# CAR-ComputerAidedRobotics

./: .gitignore  CMakeLists.txt  README.md  Structure.ggb
include/: CAR_MainWindow.h  SimState.h  Timer.h  UIWindow_3DWorkspace.h  UIWindow_Console.h  UIWindow_LibraryViewer.h  UIWindow_PlotingWorkspace.h  UIWindow_PropertiesViewer.h  UIWindow_SceneTreeViewer.h  UIWindow_ToolPanel.h
include/GUI_Core/: CMakeLists.txt  GUI_Core.cpp  GUI_Core.h
include/GUI_Core/3D/: RenderWindow.cpp
include/GUI_Core/include/: GUI_Core.h
include/GUI_Core/include/2D/: ToolPanelFile.h  UIWindow.h  UIWindow_3DWorkspace.h  UIWindow_Console.h  UIWindow_LibraryViewer.h  UIWindow_PropertiesViewer.h  UIWindow_SceneTreeViewer.h  UIWindow_ToolPanel.h  Viewer3DWindow.h
include/GUI_Core/include/3D/: BaseObject.h  BaseScene.h  RenderWindow.h  Shader.h
include/GUI_Core/include/EventHandler/: sigslot.h
include/GUI_Core/include/ShadersBuffers/: FBO.h  RBO.h  Shader.h
include/GUI_Core/include/UI/: UIGraph.h  UIWindow.h
include/GUI_Core/src/: GUI_Core.cpp
include/GUI_Core/src/2D/: ToolPanelFile.cpp  UIWindow.cpp  UIWindow_3DWorkspace.cpp  UIWindow_Console.cpp  UIWindow_LibraryViewer.cpp  UIWindow_PropertiesViewer.cpp  UIWindow_SceneTreeViewer.cpp  UIWindow_ToolPanel.cpp  Viewer3DWindow.cpp
include/GUI_Core/src/3D/: BaseObject.cpp  BaseScene.cpp  RenderWindow.cpp  Shader.cpp
include/GUI_Core/src/ShadersBuffers/: EBO.cpp  FBO.cpp  RBO.cpp  Shader.cpp  VAO.cpp  VBO.cpp
include/GUI_Core/src/UI/: UIGraph.cpp  UIWindow.cpp
include/MathAdditions/: CMakeLists.txt
include/RobotArm/: CMakeLists.txt
include/RobotArmLib/: CMakeLists.txt
include/RobotArmLib/include/: MathAdditions.h  RobotAdditions.h  RobotArmLib.h  RobotJoint.h  RobotLink.h
include/RobotArmLib/src/: MathAdditions.cpp  RobotAdditions.cpp  RobotArmLib.cpp  RobotJoint.cpp  RobotLink.cpp
src/: CAR_App.cpp  CAR_MainWindow.cpp  UIWindow_3DWorkspace.cpp  UIWindow_Console.cpp  UIWindow_LibraryViewer.cpp  UIWindow_PlotingWorkspace.cpp  UIWindow_PropertiesViewer.cpp  UIWindow_SceneTreeViewer.cpp  UIWindow_ToolPanel.cpp
